# devnet

./: README.md  consult.py  device.py  network.py  participant.py  pyproject.toml  requirements.txt
with-gns3/: devices.json  networks.py
