[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["NetAcad DEVASC <changeme@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
